title no duplicate for twitter search

--- a/CleanReadawrite.ipynb
+++ b/CleanReadawrite.ipynb
@@ -1101,7 +1101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [
     {
@@ -1429,7 +1429,7 @@
        "[14941 rows x 14 columns]"
       ]
      },
-     "execution_count": 49,
+     "execution_count": 60,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1438,9 +1438,9 @@
     "df4 = df.join(df3)\n",
     "\n",
     "#no duplicate for hashtag and title\n",
-    "df4_nodup = df4.drop_duplicates(subset=['titleandhashtag'], keep=False)\n",
-    "df4_nodup[df4_nodup['hashtag'].str.contains('') == True]\n",
+    "df4_nodup = df4.drop_duplicates(subset=['title'], keep=False)\n",
     "df4_nodup = df4_nodup[df4_nodup['category'].str.contains('Lovely|Secret')]\n",
+    "#df4_nodup.dropna(subset=['title'],inplace=True)\n",
     "df4_nodup.reset_index(drop=True, inplace=True)\n",
     "\n",
     "df4_nodup\n",
@@ -1450,7 +1450,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [
     {
@@ -1459,7 +1459,7 @@
        "1138"
       ]
      },
-     "execution_count": 50,
+     "execution_count": 61,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1467,13 +1467,13 @@
    "source": [
     "#df4.to_csv('readawrite_full_hash_set6.csv')\n",
     "#df4_nodup.to_csv(r'C:\\Users\\paton\\Pick2ReadData\\TwitterSearch\\readawrite_hash_nodup_3.csv')\n",
-    "#df4_nodup.to_csv(r'C:\\Users\\paton\\Pick2ReadData\\TwitterSearch\\readawrite_title_nodup_2.csv')\n",
+    "#df4_nodup.to_csv(r'C:\\Users\\paton\\Pick2ReadData\\TwitterSearch\\readawrite_title_nodup_3.csv')\n",
     "df4_nodup['hashtag'].count()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [
     {
@@ -1624,8 +1624,8 @@
        "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>15221</th>\n",
-       "      <td>15248</td>\n",
+       "      <th>14936</th>\n",
+       "      <td>14936</td>\n",
        "      <td>TJ Tommys</td>\n",
        "      <td>นิยาย Boy Love Lovely Room</td>\n",
        "      <td>106</td>\n",
@@ -1642,8 +1642,8 @@
        "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>15222</th>\n",
-       "      <td>15249</td>\n",
+       "      <th>14937</th>\n",
+       "      <td>14937</td>\n",
        "      <td>เรียลหริ</td>\n",
        "      <td>นิยาย Boy Love Lovely Room</td>\n",
        "      <td>16</td>\n",
@@ -1660,8 +1660,8 @@
        "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>15223</th>\n",
-       "      <td>15250</td>\n",
+       "      <th>14938</th>\n",
+       "      <td>14938</td>\n",
        "      <td>pedseyellow</td>\n",
        "      <td>นิยาย Boy Love Lovely Room</td>\n",
        "      <td>0</td>\n",
@@ -1678,8 +1678,8 @@
        "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>15224</th>\n",
-       "      <td>15251</td>\n",
+       "      <th>14939</th>\n",
+       "      <td>14939</td>\n",
        "      <td>EuraysiaSama</td>\n",
        "      <td>นิยาย Boy Love Secret Room</td>\n",
        "      <td>12</td>\n",
@@ -1696,8 +1696,8 @@
        "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>15225</th>\n",
-       "      <td>15252</td>\n",
+       "      <th>14940</th>\n",
+       "      <td>14940</td>\n",
        "      <td>penguin_23</td>\n",
        "      <td>นิยาย Boy Love Lovely Room</td>\n",
        "      <td>5</td>\n",
@@ -1715,7 +1715,7 @@
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>15226 rows × 15 columns</p>\n",
+       "<p>14941 rows × 15 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
@@ -1726,11 +1726,11 @@
        "3               3             ลูกหมูสามตัว  นิยาย Boy Love Secret Room   \n",
        "4               4            หัวยุ่ง ฟูเอง  นิยาย Boy Love Secret Room   \n",
        "...           ...                      ...                         ...   \n",
-       "15221       15248                TJ Tommys  นิยาย Boy Love Lovely Room   \n",
-       "15222       15249                 เรียลหริ  นิยาย Boy Love Lovely Room   \n",
-       "15223       15250              pedseyellow  นิยาย Boy Love Lovely Room   \n",
-       "15224       15251             EuraysiaSama  นิยาย Boy Love Secret Room   \n",
-       "15225       15252               penguin_23  นิยาย Boy Love Lovely Room   \n",
+       "14936       14936                TJ Tommys  นิยาย Boy Love Lovely Room   \n",
+       "14937       14937                 เรียลหริ  นิยาย Boy Love Lovely Room   \n",
+       "14938       14938              pedseyellow  นิยาย Boy Love Lovely Room   \n",
+       "14939       14939             EuraysiaSama  นิยาย Boy Love Secret Room   \n",
+       "14940       14940               penguin_23  นิยาย Boy Love Lovely Room   \n",
        "\n",
        "      commentCount                                        description  \\\n",
        "0            1,460  \"ที่ผมกินลูกอมจนฟันผุ ก็แค่ข้ออ้างที่อยากมาหาพ...   \n",
@@ -1739,11 +1739,11 @@
        "3               14  ด้วยความโง่ของผมทำให้ความลับที่ปกปิดมาเกือบยี่...   \n",
        "4                2  การเริ่มต้นชีวิตของเด็กมหาลัยปีสองคุณคิดว่าเริ...   \n",
        "...            ...                                                ...   \n",
-       "15221          106  เมื่อหนุ่มหล่อสุดเพอร์เฟกต์ต้องเสียความบริสุทธ...   \n",
-       "15222           16  องค์ชายรองแห่งแคว้นจ้าวเช่นเขา กลับกลายมาเป็นเ...   \n",
-       "15223            0  \"พี่ให้เธอทั้งหมดในบัญชีเธอเอาเท่าไหร่ว่ามา\" \"...   \n",
-       "15224           12  \"ถ้าจะจัดการคนเลว ก็คงต้องส่งไปเจอกับคนที่เลวก...   \n",
-       "15225            5  ยอมสละบัลลังก์เพื่อหลีกเลี่ยงแฟล็กความตายที่จะ...   \n",
+       "14936          106  เมื่อหนุ่มหล่อสุดเพอร์เฟกต์ต้องเสียความบริสุทธ...   \n",
+       "14937           16  องค์ชายรองแห่งแคว้นจ้าวเช่นเขา กลับกลายมาเป็นเ...   \n",
+       "14938            0  \"พี่ให้เธอทั้งหมดในบัญชีเธอเอาเท่าไหร่ว่ามา\" \"...   \n",
+       "14939           12  \"ถ้าจะจัดการคนเลว ก็คงต้องส่งไปเจอกับคนที่เลวก...   \n",
+       "14940            5  ยอมสละบัลลังก์เพื่อหลีกเลี่ยงแฟล็กความตายที่จะ...   \n",
        "\n",
        "      favouriteCount isComplete  numOfchap  \\\n",
        "0              4,159         จบ       30.0   \n",
@@ -1752,11 +1752,11 @@
        "3                 79         จบ        8.0   \n",
        "4                  1         จบ        0.0   \n",
        "...              ...        ...        ...   \n",
-       "15221            391         จบ       20.0   \n",
-       "15222             67         จบ        2.0   \n",
-       "15223              0         จบ        0.0   \n",
-       "15224             35         จบ        1.0   \n",
-       "15225             30         จบ        2.0   \n",
+       "14936            391         จบ       20.0   \n",
+       "14937             67         จบ        2.0   \n",
+       "14938              0         จบ        0.0   \n",
+       "14939             35         จบ        1.0   \n",
+       "14940             30         จบ        2.0   \n",
        "\n",
        "                                                     pic ratingCount  \\\n",
        "0      https://cdn.readawrite.com/articles/1943/19420...         597   \n",
@@ -1765,11 +1765,11 @@
        "3      https://cdn.readawrite.com/articles/1943/19421...           9   \n",
        "4      https://cdn.readawrite.com/articles/1943/19422...           2   \n",
        "...                                                  ...         ...   \n",
-       "15221  https://cdn.readawrite.com/articles/1898/18976...          44   \n",
-       "15222  https://cdn.readawrite.com/articles/1898/18977...          12   \n",
-       "15223  https://cdn.readawrite.com/articles/1898/18977...           0   \n",
-       "15224  https://cdn.readawrite.com/articles/1898/18978...           8   \n",
-       "15225  https://cdn.readawrite.com/articles/1898/18978...           4   \n",
+       "14936  https://cdn.readawrite.com/articles/1898/18976...          44   \n",
+       "14937  https://cdn.readawrite.com/articles/1898/18977...          12   \n",
+       "14938  https://cdn.readawrite.com/articles/1898/18977...           0   \n",
+       "14939  https://cdn.readawrite.com/articles/1898/18978...           8   \n",
+       "14940  https://cdn.readawrite.com/articles/1898/18978...           4   \n",
        "\n",
        "                                                     tag  \\\n",
        "0      นิยายวาย,นิยายสนุกๆ,ตลก / comedy,นิยายตลก,หวาน...   \n",
@@ -1778,11 +1778,11 @@
        "3                                                    NaN   \n",
        "4      Boy Love/Yaoi,นิยายวาย,ตลก,ผีในห้อง,18+,สืบสวน...   \n",
        "...                                                  ...   \n",
-       "15221  18+,Boy Love/Yaoi,นิยายโรแมนติก,ตลก,โรงเรียน,น...   \n",
-       "15222                          เรียลหริ,นิยายวายจีนโบราณ   \n",
-       "15223                                             ตามจีบ   \n",
-       "15224                                Boy Love/Yaoi,Mpreg   \n",
-       "15225   Boy Love/Yaoi,เกิดใหม่ในต่างโลก,ชารอนไม่ทิ้งผัก!   \n",
+       "14936  18+,Boy Love/Yaoi,นิยายโรแมนติก,ตลก,โรงเรียน,น...   \n",
+       "14937                          เรียลหริ,นิยายวายจีนโบราณ   \n",
+       "14938                                             ตามจีบ   \n",
+       "14939                                Boy Love/Yaoi,Mpreg   \n",
+       "14940   Boy Love/Yaoi,เกิดใหม่ในต่างโลก,ชารอนไม่ทิ้งผัก!   \n",
        "\n",
        "                                                   title   viewer  \\\n",
        "0                                  ถ้าผมดื้อพี่จะดุผมไหม  171,581   \n",
@@ -1791,11 +1791,11 @@
        "3                         Deadly Nightshade (Omegaverse)    1,901   \n",
        "4                              ผม ผีในห้อง และคนข้างห้อง       38   \n",
        "...                                                  ...      ...   \n",
-       "15221                               เพลงพราย กลร้ายกลรัก   22,477   \n",
-       "15222                            จอมใจจักรพรรดิแดนเถื่อน      955   \n",
-       "15223                          MONEYFORU | เท่าไหร่ว่ามา        5   \n",
-       "15224       I Demon  King I จอมปีศาจกับราชาทรราช (Mpreg)      339   \n",
-       "15225  เกษียณบทตัวร้ายเพื่อกลับบ้านไปเลี้ยงเทวทูต | #...      427   \n",
+       "14936                               เพลงพราย กลร้ายกลรัก   22,477   \n",
+       "14937                            จอมใจจักรพรรดิแดนเถื่อน      955   \n",
+       "14938                          MONEYFORU | เท่าไหร่ว่ามา        5   \n",
+       "14939       I Demon  King I จอมปีศาจกับราชาทรราช (Mpreg)      339   \n",
+       "14940  เกษียณบทตัวร้ายเพื่อกลับบ้านไปเลี้ยงเทวทูต | #...      427   \n",
        "\n",
        "                                        new_title           hashtag  \n",
        "0                           ถ้าผมดื้อพี่จะดุผมไหม               NaN  \n",
@@ -1804,16 +1804,16 @@
        "3                                             NaN               NaN  \n",
        "4                         ผมผีในห้องและคนข้างห้อง               NaN  \n",
        "...                                           ...               ...  \n",
-       "15221                         เพลงพรายกลร้ายกลรัก               NaN  \n",
-       "15222                     จอมใจจักรพรรดิแดนเถื่อน               NaN  \n",
-       "15223                               เท่าไหร่ว่ามา               NaN  \n",
-       "15224                        จอมปีศาจกับราชาทรราช               NaN  \n",
-       "15225  เกษียณบทตัวร้ายเพื่อกลับบ้านไปเลี้ยงเทวทูต  ชารอนอย่าทิ้งผัก  \n",
+       "14936                         เพลงพรายกลร้ายกลรัก               NaN  \n",
+       "14937                     จอมใจจักรพรรดิแดนเถื่อน               NaN  \n",
+       "14938                               เท่าไหร่ว่ามา               NaN  \n",
+       "14939                        จอมปีศาจกับราชาทรราช               NaN  \n",
+       "14940  เกษียณบทตัวร้ายเพื่อกลับบ้านไปเลี้ยงเทวทูต  ชารอนอย่าทิ้งผัก  \n",
        "\n",
-       "[15226 rows x 15 columns]"
+       "[14941 rows x 15 columns]"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 56,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1826,8 +1826,9 @@
     "#boyslove.to_csv(r'C:\\Users\\paton\\Pick2ReadData\\BoysloveFiltered\\readawrite_y5.csv',encoding='utf-8')\n",
     "boyslove[boyslove['hashtag'].str.contains('ป๋อจ้าน') == True]\n",
     "\n",
-    "test = pd.read_csv(r'C:\\Users\\paton\\Pick2ReadData\\BoysloveFiltered\\readawrite_y4.csv')\n",
-    "test"
+    "test = pd.read_csv(r'C:\\Users\\paton\\Pick2ReadData\\TwitterSearch\\readawrite_title_nodup_2.csv')\n",
+    "test[test['category'].str.contains('Lovely|Secret')]\n",
+    "#test"
    ]
   },
   {
