check duplicate of rating weight and no weight

--- a/Rating/RatingCalculation/Calrating6_rq12_noWeight.ipynb
+++ b/Rating/RatingCalculation/Calrating6_rq12_noWeight.ipynb
@@ -634,6 +634,93 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Website\n",
+      "view and like : 0.9201729325987775\n",
+      "view and add to bookshelf : 0.9011047976336266\n",
+      "view and comment : 0.9140068969050019\n",
+      "like and add to bookshelf : 0.9669282022058224\n",
+      "like and comment : 0.9366515406784068\n",
+      "add to bookshelf and comment : 0.861853536563523\n",
+      "\n",
+      "Twitter\n",
+      "no tweet and RT : 0.36158518138492285\n",
+      "no tweet and Fav : 0.2360962381891951\n",
+      "no tweet and #แนะนำนิยาย : 0.30224383218638246\n",
+      "#แนะนำนิยาย and RT : 0.03441578265450749\n",
+      "#แนะนำนิยาย and Fav : -0.0034426738878812896\n",
+      "RT and Fav : 0.8174588838061119\n",
+      "\n",
+      "Website and Twitter\n",
+      "no tweet and view : 0.09357071471303131\n",
+      "no tweet and add to bookshelf : 0.15540435403516428\n",
+      "no tweet and like : 0.12771529438045812\n",
+      "no tweet and comment : 0.1317436756547411\n",
+      "\n",
+      "retweet and view : -0.013002294853006358\n",
+      "retweet and add to bookshelf : -0.01736285760950577\n",
+      "retweet and like : -0.012179695431024113\n",
+      "retweet and comment : -0.009766709008063297\n",
+      "\n",
+      "fav and view : -0.015262483302619298\n",
+      "fav and add to bookshelf : -0.020906912148149947\n",
+      "fav and like : -0.015407081090120317\n",
+      "fav and comment : -0.013331643026250515\n",
+      "\n",
+      "fav and view : 0.19127981498254265\n",
+      "fav and add to bookshelf : 0.2815647283754963\n",
+      "fav and like : 0.2432006069632653\n",
+      "fav and comment : 0.1984115492435924\n"
+     ]
+    }
+   ],
+   "source": [
+    "print('Website')\n",
+    "print('view and like : ' + str(df['viewer'].corr(df['ratingCount'])))\n",
+    "print('view and add to bookshelf : ' +str(df['viewer'].corr(df['favouriteCount'])))\n",
+    "print('view and comment : ' +str(df['viewer'].corr(df['commentCount'])))\n",
+    "print('like and add to bookshelf : ' +str(df['ratingCount'].corr(df['favouriteCount'])))\n",
+    "print('like and comment : ' +str(df['ratingCount'].corr(df['commentCount'])))\n",
+    "print('add to bookshelf and comment : ' +str(df['favouriteCount'].corr(df['commentCount'])))\n",
+    "print('\\nTwitter')\n",
+    "dfCorr = df[df['countTweet'] > 0.0]\n",
+    "print('no tweet and RT : '+str(dfCorr['countTweet'].corr(dfCorr['countRetweet'])))\n",
+    "print('no tweet and Fav : '+str(dfCorr['countTweet'].corr(dfCorr['countFav'])))\n",
+    "print('no tweet and #แนะนำนิยาย : '+str(dfCorr['countTweet'].corr(dfCorr['countHashReview'])))\n",
+    "print('#แนะนำนิยาย and RT : '+str(dfCorr['countHashReview'].corr(dfCorr['countRetweet'])))\n",
+    "print('#แนะนำนิยาย and Fav : '+str(dfCorr['countHashReview'].corr(dfCorr['countFav'])))\n",
+    "print('RT and Fav : '+str(dfCorr['countRetweet'].corr(dfCorr['countFav'])))\n",
+    "\n",
+    "print('\\nWebsite and Twitter')\n",
+    "print('no tweet and view : '+str(dfCorr['countTweet'].corr(dfCorr['viewer'])))\n",
+    "print('no tweet and add to bookshelf : '+str(dfCorr['countTweet'].corr(dfCorr['favouriteCount'])))\n",
+    "print('no tweet and like : '+str(dfCorr['countTweet'].corr(dfCorr['ratingCount'])))\n",
+    "print('no tweet and comment : '+str(dfCorr['countTweet'].corr(dfCorr['commentCount'])))\n",
+    "print('')\n",
+    "print('retweet and view : '+str(dfCorr['countRetweet'].corr(dfCorr['viewer'])))\n",
+    "print('retweet and add to bookshelf : '+str(dfCorr['countRetweet'].corr(dfCorr['favouriteCount'])))\n",
+    "print('retweet and like : '+str(dfCorr['countRetweet'].corr(dfCorr['ratingCount'])))\n",
+    "print('retweet and comment : '+str(dfCorr['countRetweet'].corr(dfCorr['commentCount'])))\n",
+    "print('')\n",
+    "print('fav and view : '+str(dfCorr['countFav'].corr(dfCorr['viewer'])))\n",
+    "print('fav and add to bookshelf : '+str(dfCorr['countFav'].corr(dfCorr['favouriteCount'])))\n",
+    "print('fav and like : '+str(dfCorr['countFav'].corr(dfCorr['ratingCount'])))\n",
+    "print('fav and comment : '+str(dfCorr['countFav'].corr(dfCorr['commentCount'])))\n",
+    "print('')\n",
+    "print('fav and view : '+str(dfCorr['countHashReview'].corr(dfCorr['viewer'])))\n",
+    "print('fav and add to bookshelf : '+str(dfCorr['countHashReview'].corr(dfCorr['favouriteCount'])))\n",
+    "print('fav and like : '+str(dfCorr['countHashReview'].corr(dfCorr['ratingCount'])))\n",
+    "print('fav and comment : '+str(dfCorr['countHashReview'].corr(dfCorr['commentCount'])))"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 9,
    "metadata": {},
    "outputs": [
