--- a/Rating/RatingCalculation/checkDupList2.ipynb
+++ b/Rating/RatingCalculation/checkDupList2.ipynb
@@ -2,14 +2,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['Ratingrq1_1w.csv', 'Ratingrq1_2w.csv', 'Ratingrq1_3w.csv', 'Ratingrq2_11w.csv', 'Ratingrq2_12w.csv', 'Ratingrq2_13w.csv', 'Ratingrq2_1w.csv', 'Ratingrq2_21w.csv', 'Ratingrq2_22w.csv', 'Ratingrq2_23w.csv', 'Ratingrq2_2w.csv', 'Ratingrq2_31w.csv', 'Ratingrq2_32w.csv', 'Ratingrq2_33w.csv', 'Ratingrq2_3w.csv']\n"
+      "['Ratingrq1_1.csv', 'Ratingrq1_2.csv', 'Ratingrq1_3.csv', 'Ratingrq2_1.csv', 'Ratingrq2_11.csv', 'Ratingrq2_12.csv', 'Ratingrq2_13.csv', 'Ratingrq2_2.csv', 'Ratingrq2_21.csv', 'Ratingrq2_22.csv', 'Ratingrq2_23.csv', 'Ratingrq2_3.csv', 'Ratingrq2_31.csv', 'Ratingrq2_32.csv', 'Ratingrq2_33.csv']\n"
      ]
     }
    ],
@@ -22,10 +22,10 @@
     "from os import path\n",
     "i = 0\n",
     "count = 0\n",
-    "folder1 = 'C:/Users/paton/Pick2ReadData/Rating/Rq_W' \n",
-    "#folder2 = 'C:/Users/paton/Pick2ReadData/Rating/Rq_W' \n",
+    "folder1 = 'C:/Users/paton/Pick2ReadData/Rating/Rq12_noWeight' \n",
+    "folder2 = 'C:/Users/paton/Pick2ReadData/Rating/Rq_W' \n",
     "file1 = os.listdir(folder1)\n",
-    "#file2 = os.listdir(folder2)\n",
+    "file2 = os.listdir(folder2)\n",
     "print(file1)"
    ]
   },
@@ -39,7 +39,8 @@
      "output_type": "stream",
      "text": [
       "15\n",
-      "['listRatingrq1_1w', 'listRatingrq1_2w', 'listRatingrq1_3w', 'listRatingrq2_11w', 'listRatingrq2_12w', 'listRatingrq2_13w', 'listRatingrq2_1w', 'listRatingrq2_21w', 'listRatingrq2_22w', 'listRatingrq2_23w', 'listRatingrq2_2w', 'listRatingrq2_31w', 'listRatingrq2_32w', 'listRatingrq2_33w', 'listRatingrq2_3w']\n",
+      "['listRatingrq1_1', 'listRatingrq1_2', 'listRatingrq1_3', 'listRatingrq2_1', 'listRatingrq2_11', 'listRatingrq2_12', 'listRatingrq2_13', 'listRatingrq2_2', 'listRatingrq2_21', 'listRatingrq2_22', 'listRatingrq2_23', 'listRatingrq2_3', 'listRatingrq2_31', 'listRatingrq2_32', 'listRatingrq2_33']\n",
+      "15\n",
       "15\n"
      ]
     }
@@ -53,37 +54,68 @@
     "        x = i.split(\".csv\",1)\n",
     "        x = ''.join(x)\n",
     "        exec(\"%s = pd.read_csv('%s')\" % (x,namex))\n",
-    "        exec(\"%s = %s[['title']].head(10)\" % (x,x))\n",
+    "        exec(\"%s = %s[['title']].head(20)\" % (x,x))\n",
     "        s1 = 'list' + str(x)\n",
     "        exec(\"listname.append(s1)\")\n",
     "        exec(\"%s = %s['title'].tolist()\" % (s1,x))\n",
     "\n",
+    "listname2 = []\n",
+    "for i in file2:\n",
+    "    if i.endswith('.csv'):\n",
+    "        namex = os.path.join(folder2,str(i))\n",
+    "        x = i.split(\".csv\",1)\n",
+    "        x = ''.join(x)\n",
+    "        exec(\"%s = pd.read_csv('%s')\" % (x,namex))\n",
+    "        exec(\"%s = %s[['title']].head(20)\" % (x,x))\n",
+    "        s1 = 'list' + str(x)\n",
+    "        exec(\"listname2.append(s1)\")\n",
+    "        exec(\"%s = %s['title'].tolist()\" % (s1,x))\n",
+    "        \n",
+    "        \n",
+    "        \n",
+    "        \n",
     "print(len(listname))\n",
     "print(listname)\n",
-    "#l = [listRatingrq1_1, listRatingrq1_2, listRatingrq1_3, listRatingrq2_1, listRatingrq2_11, listRatingrq2_12, listRatingrq2_13, listRatingrq2_2, listRatingrq2_21, listRatingrq2_22, listRatingrq2_23, listRatingrq2_3, listRatingrq2_31, listRatingrq2_32, listRatingrq2_33]\n",
-    "l = [listRatingrq1_1w, listRatingrq1_2w, listRatingrq1_3w, listRatingrq2_1w, listRatingrq2_11w, listRatingrq2_12w, listRatingrq2_13w, listRatingrq2_2w, listRatingrq2_21w, listRatingrq2_22w, listRatingrq2_23w, listRatingrq2_3w, listRatingrq2_31w, listRatingrq2_32w, listRatingrq2_33w]\n",
-    "\n",
-    "print(len(l))\n",
+    "l1 = [listRatingrq1_1, listRatingrq1_2, listRatingrq1_3, listRatingrq2_1, listRatingrq2_11, listRatingrq2_12, listRatingrq2_13, listRatingrq2_2, listRatingrq2_21, listRatingrq2_22, listRatingrq2_23, listRatingrq2_3, listRatingrq2_31, listRatingrq2_32, listRatingrq2_33]\n",
+    "print(len(l1))\n",
+    "l2 = [listRatingrq1_1w, listRatingrq1_2w, listRatingrq1_3w, listRatingrq2_1w, listRatingrq2_11w, listRatingrq2_12w, listRatingrq2_13w, listRatingrq2_2w, listRatingrq2_21w, listRatingrq2_22w, listRatingrq2_23w, listRatingrq2_3w, listRatingrq2_31w, listRatingrq2_32w, listRatingrq2_33w]\n",
+    "print(len(l2))\n",
     "#l"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 14,
    "metadata": {
     "scrolled": true
    },
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'l' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-3-bc8731b75aba>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0ml\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m==\u001b[0m\u001b[0ml\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      2\u001b[0m \u001b[0mlistRatingrq1_1\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mNameError\u001b[0m: name 'l' is not defined"
-     ]
+     "data": {
+      "text/plain": [
+       "['ชายาข้า ใครบังอาจหาญกล้ามาแตะ!!!',\n",
+       " 'เหนือมังกร เคียงบัลลังก์(สนพ.บ้านวายบุ๊ค)',\n",
+       " 'เกิดใหม่ทั้งทีมีแค่นี้?',\n",
+       " 'ตัวนิดของคุณใหญ่ | BL-Omegaverse',\n",
+       " 'คุณพฤกษ์รวยมาก - BL (สนพ.Onederwhy)',\n",
+       " '我的王妃很漂亮！ชายาข้างามยิ่งนัก',\n",
+       " 'ไม้เรียวสีขาวกับเสื้อกาวน์เปื้อนชอล์ก > Mpreg&lt;',\n",
+       " 'สามีนอกสมรส [Omegaverse , Mpreg]',\n",
+       " '[Pre - order เล่ม 1]ฮ่องเต้เหตุใดท่านจึงงดงามเช่นนี้ [Mpreg,จีนโบราณ]',\n",
+       " '(นิยายแปลจีน) Cannon Fodder Cheat System - ระบบโกงชะตาตาย',\n",
+       " '(omegaverse) daylight destiny #ไม่รักป๊าหรือม๊า',\n",
+       " '[Omegaverse] Never Ωmega in the army (#โอเมก้าตาบอด)',\n",
+       " 'ผู้ชายที่เจอในแอปหาคู่คนนั้นรักจริงใช่ไหม (สนพ.พันแสง)',\n",
+       " '#อุบายกินรา [YAOI] (สนพ. Hermit)',\n",
+       " 'ฝนหลงฤดู',\n",
+       " 'เกิดใหม่อีกครั้งก็ยังห้าวไม่เลิก(yaoi,3p)',\n",
+       " 'คุณสราญหาคู่',\n",
+       " '#ผมไหว้ล่ะพี่ปี [Yaoi]']"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -131,18 +163,32 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "listRatingrq2_12w equal to listRatingrq2_1w\n",
-      "listRatingrq2_1w equal to listRatingrq2_12w\n",
-      "listRatingrq2_22w equal to listRatingrq2_32w\n",
-      "listRatingrq2_32w equal to listRatingrq2_22w\n"
+      "listRatingrq1_1 equal to listRatingrq1_1w\n",
+      "listRatingrq1_2 equal to listRatingrq1_2w\n",
+      "listRatingrq1_3 equal to listRatingrq1_3w\n",
+      "listRatingrq2_1 equal to listRatingrq2_11w\n",
+      "listRatingrq2_11 equal to listRatingrq2_12w\n",
+      "listRatingrq2_12 equal to listRatingrq2_13w\n",
+      "listRatingrq2_13 equal to listRatingrq2_1w\n",
+      "listRatingrq2_2 equal to listRatingrq2_21w\n",
+      "listRatingrq2_21 equal to listRatingrq2_22w\n",
+      "listRatingrq2_22 equal to listRatingrq2_23w\n",
+      "listRatingrq2_23 equal to listRatingrq2_2w\n",
+      "listRatingrq2_3 equal to listRatingrq2_31w\n",
+      "listRatingrq2_31 equal to listRatingrq2_32w\n",
+      "listRatingrq2_32 equal to listRatingrq2_33w\n",
+      "14\n"
      ]
     }
    ],
    "source": [
-    "for x in range(len(l)):\n",
-    "    for y in range(len(l)):\n",
-    "        if l[x] == l[y] and listname[x] != listname[y]: \n",
-    "            print(listname[x] + \" equal to \" + listname[y])"
+    "count = 0\n",
+    "for x in range(len(l1)):\n",
+    "    for y in range(len(l2)):\n",
+    "        if l1[x] == l2[y] and listname[x] != listname2[y]: \n",
+    "            print(listname[x] + \" equal to \" + listname2[y])\n",
+    "            count = count + 1\n",
+    "print(count)"
    ]
   },
   {
@@ -187,7 +233,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -195,44 +241,54 @@
      "output_type": "stream",
      "text": [
       "0\n",
-      "องค์ชายสามช่างไม่เอาไหน (สนพ.ฟาไฉ)\n",
-      "องค์ชายสามช่างไม่เอาไหน (สนพ.ฟาไฉ)\n",
+      "ค่อยๆ รัก | #เจ๋งพัท\n",
       "1\n",
-      "ชายาข้า ใครบังอาจหาญกล้ามาแตะ!!!\n",
-      "ชายาข้า ใครบังอาจหาญกล้ามาแตะ!!!\n",
+      "UNKNOWN LOVER #เขาชื่ออันวาร์\n",
       "2\n",
-      "(omegaverse) midnight fortune #อย่าบอกป๊านะม๊า\n",
-      "(omegaverse) midnight fortune #อย่าบอกป๊านะม๊า\n",
+      "#ของขวัญ\n",
       "3\n",
-      "The time to kill \\\"เกมรักอำมหิต\\\"\n",
-      "The time to kill \\\"เกมรักอำมหิต\\\"\n",
+      "รัตติจันทร์พันกร : ( Mpreg )\n",
       "4\n",
-      "สามี ข้าจะปกป้องท่านเอง!(สนพ.บ้านวายบุ๊ค)\n",
-      "สามี ข้าจะปกป้องท่านเอง!(สนพ.บ้านวายบุ๊ค)\n",
+      "เสือวิศวะอ่ะ เคยได้ยินป่ะ #กลรักรุ่นพี่ #ฉบับกูเอง\n",
       "5\n",
-      "มหาลัยครึ่งมนุษย์ (ebook)\n",
-      "มหาลัยครึ่งมนุษย์ (ebook)\n",
+      "(omegaverse) daylight destiny #ไม่รักป๊าหรือม๊า\n",
       "6\n",
-      "Eye Contact \\\"เพียงสบตา\\\"\n",
-      "Eye Contact \\\"เพียงสบตา\\\"\n",
+      "หม่อน |oikawa×Iwaizumi|\n",
       "7\n",
-      "ชมรมนี้ผู้จัดการ ‘SEX’ เก่ง\n",
-      "ชมรมนี้ผู้จัดการ ‘SEX’ เก่ง\n",
-      "9\n",
-      "เหนือมังกร เคียงบัลลังก์(สนพ.บ้านวายบุ๊ค)\n",
-      "เหนือมังกร เคียงบัลลังก์(สนพ.บ้านวายบุ๊ค)\n",
+      "[ END ] FOREVER #คิมคอป\n",
       "8\n",
-      "[นิยายแปล] ผมแต่งงานกับเจ้าสัวยังหนุ่ม : Second Marriage of a Wealthy Old Man\n",
-      "[นิยายแปล] ผมแต่งงานกับเจ้าสัวยังหนุ่ม : Second Marriage of a Wealthy Old Man\n"
+      "ห่างใกล้\n",
+      "9\n",
+      "Thanks For You รู้แล้วว่ารัก (Franzis X Renny)\n",
+      "10\n",
+      "582 KM กรุงเทพ-เชียงใหม่\n",
+      "11\n",
+      "PROJECT FANFICTION #ฮยอนบิน\n",
+      "12\n",
+      "🤍` มกปฟก ` | mewgulf\n",
+      "13\n",
+      "#วันดีวิทยา [S E T วิ ท ย า]\n",
+      "14\n",
+      "#อุบายกินรา [YAOI] (สนพ. Hermit)\n",
+      "15\n",
+      "ต้นหนชลธี (set4ตัว100) [สนพ.Deep publishing]\n",
+      "16\n",
+      "[yaoi] #อาการจะรัก\n",
+      "17\n",
+      "The Scum Shou’s Survival Guide (BLแปลจีน)\n",
+      "18\n",
+      "(1) พะเยา #ทัวร์เที่ยวไทย 77 จังหวัด\n",
+      "19\n",
+      "Real Love #รักแท้ของผมคือคุณ [YAOI]\n"
      ]
     }
    ],
    "source": [
-    "for x in range(len(listRatingrq1_3)):\n",
-    "    for y in range(len(listRatingrq1_1)):\n",
-    "        if listRatingrq1_3[x] == listRatingrq1_1[y]:\n",
+    "for x in range(len(listRatingrq2_1)):\n",
+    "    for y in range(len(listRatingrq2_1w)):\n",
+    "        if listRatingrq2_1[x] == listRatingrq2_1w[y]:\n",
     "            print(y)\n",
-    "            print(listRatingrq1_1[y])\n",
+    "            print(listRatingrq2_1[x])\n",
     "            #print(listRatingrq1_3[x])\n",
     "#listRating102[4508]"
    ]
