evaluation of rating

--- a/Rating/RatingCalculation/checkDupList2.ipynb
+++ b/Rating/RatingCalculation/checkDupList2.ipynb
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -54,7 +54,7 @@
     "        x = i.split(\".csv\",1)\n",
     "        x = ''.join(x)\n",
     "        exec(\"%s = pd.read_csv('%s')\" % (x,namex))\n",
-    "        exec(\"%s = %s[['title']].head(20)\" % (x,x))\n",
+    "        exec(\"%s = %s[['title']].head(15)\" % (x,x))\n",
     "        s1 = 'list' + str(x)\n",
     "        exec(\"listname.append(s1)\")\n",
     "        exec(\"%s = %s['title'].tolist()\" % (s1,x))\n",
@@ -66,7 +66,7 @@
     "        x = i.split(\".csv\",1)\n",
     "        x = ''.join(x)\n",
     "        exec(\"%s = pd.read_csv('%s')\" % (x,namex))\n",
-    "        exec(\"%s = %s[['title']].head(20)\" % (x,x))\n",
+    "        exec(\"%s = %s[['title']].head(15)\" % (x,x))\n",
     "        s1 = 'list' + str(x)\n",
     "        exec(\"listname2.append(s1)\")\n",
     "        exec(\"%s = %s['title'].tolist()\" % (s1,x))\n",
@@ -154,7 +154,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 5,
    "metadata": {
     "scrolled": true
    },
@@ -168,7 +168,9 @@
       "listRatingrq1_3 equal to listRatingrq1_3w\n",
       "listRatingrq2_1 equal to listRatingrq2_11w\n",
       "listRatingrq2_11 equal to listRatingrq2_12w\n",
+      "listRatingrq2_11 equal to listRatingrq2_1w\n",
       "listRatingrq2_12 equal to listRatingrq2_13w\n",
+      "listRatingrq2_13 equal to listRatingrq2_12w\n",
       "listRatingrq2_13 equal to listRatingrq2_1w\n",
       "listRatingrq2_2 equal to listRatingrq2_21w\n",
       "listRatingrq2_21 equal to listRatingrq2_22w\n",
@@ -177,7 +179,7 @@
       "listRatingrq2_3 equal to listRatingrq2_31w\n",
       "listRatingrq2_31 equal to listRatingrq2_32w\n",
       "listRatingrq2_32 equal to listRatingrq2_33w\n",
-      "14\n"
+      "16\n"
      ]
     }
    ],
