--- a/Rating/RatingCalculation/checkDupList.ipynb
+++ b/Rating/RatingCalculation/checkDupList.ipynb
@@ -2,14 +2,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['Ratingrq1_1w.csv', 'Ratingrq1_2w.csv', 'Ratingrq1_3w.csv', 'Ratingrq2_11w.csv', 'Ratingrq2_12w.csv', 'Ratingrq2_13w.csv', 'Ratingrq2_1w.csv', 'Ratingrq2_21w.csv', 'Ratingrq2_22w.csv', 'Ratingrq2_23w.csv', 'Ratingrq2_2w.csv', 'Ratingrq2_31w.csv', 'Ratingrq2_32w.csv', 'Ratingrq2_33w.csv', 'Ratingrq2_3w.csv']\n"
+      "['Eva.csv', 'Ratingrq1_1.csv', 'Ratingrq1_2.csv', 'Ratingrq1_3.csv', 'Ratingrq2_1.csv', 'Ratingrq2_11.csv', 'Ratingrq2_12.csv', 'Ratingrq2_13.csv', 'Ratingrq2_2.csv', 'Ratingrq2_21.csv', 'Ratingrq2_22.csv', 'Ratingrq2_23.csv', 'Ratingrq2_3.csv', 'Ratingrq2_31.csv', 'Ratingrq2_32.csv', 'Ratingrq2_33.csv']\n"
      ]
     }
    ],
@@ -22,7 +22,7 @@
     "from os import path\n",
     "i = 0\n",
     "count = 0\n",
-    "folder1 = 'C:/Users/paton/Pick2ReadData/Rating/Rq_W' \n",
+    "folder1 = 'C:/Users/paton/Pick2ReadData/Rating/Evaluation' \n",
     "#folder2 = 'C:/Users/paton/Pick2ReadData/Rating/Rq_W' \n",
     "file1 = os.listdir(folder1)\n",
     "#file2 = os.listdir(folder2)\n",
@@ -31,16 +31,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "15\n",
-      "['listRatingrq1_1w', 'listRatingrq1_2w', 'listRatingrq1_3w', 'listRatingrq2_11w', 'listRatingrq2_12w', 'listRatingrq2_13w', 'listRatingrq2_1w', 'listRatingrq2_21w', 'listRatingrq2_22w', 'listRatingrq2_23w', 'listRatingrq2_2w', 'listRatingrq2_31w', 'listRatingrq2_32w', 'listRatingrq2_33w', 'listRatingrq2_3w']\n",
-      "15\n"
+      "16\n",
+      "['listEva', 'listRatingrq1_1', 'listRatingrq1_2', 'listRatingrq1_3', 'listRatingrq2_1', 'listRatingrq2_11', 'listRatingrq2_12', 'listRatingrq2_13', 'listRatingrq2_2', 'listRatingrq2_21', 'listRatingrq2_22', 'listRatingrq2_23', 'listRatingrq2_3', 'listRatingrq2_31', 'listRatingrq2_32', 'listRatingrq2_33']\n",
+      "16\n"
      ]
     }
    ],
@@ -53,15 +53,15 @@
     "        x = i.split(\".csv\",1)\n",
     "        x = ''.join(x)\n",
     "        exec(\"%s = pd.read_csv('%s')\" % (x,namex))\n",
-    "        exec(\"%s = %s[['title']].head(10)\" % (x,x))\n",
+    "        exec(\"%s = %s[['title']].head(5)\" % (x,x))\n",
     "        s1 = 'list' + str(x)\n",
     "        exec(\"listname.append(s1)\")\n",
     "        exec(\"%s = %s['title'].tolist()\" % (s1,x))\n",
     "\n",
     "print(len(listname))\n",
     "print(listname)\n",
-    "#l = [listRatingrq1_1, listRatingrq1_2, listRatingrq1_3, listRatingrq2_1, listRatingrq2_11, listRatingrq2_12, listRatingrq2_13, listRatingrq2_2, listRatingrq2_21, listRatingrq2_22, listRatingrq2_23, listRatingrq2_3, listRatingrq2_31, listRatingrq2_32, listRatingrq2_33]\n",
-    "l = [listRatingrq1_1w, listRatingrq1_2w, listRatingrq1_3w, listRatingrq2_1w, listRatingrq2_11w, listRatingrq2_12w, listRatingrq2_13w, listRatingrq2_2w, listRatingrq2_21w, listRatingrq2_22w, listRatingrq2_23w, listRatingrq2_3w, listRatingrq2_31w, listRatingrq2_32w, listRatingrq2_33w]\n",
+    "l = [listEva,listRatingrq1_1, listRatingrq1_2, listRatingrq1_3, listRatingrq2_1, listRatingrq2_11, listRatingrq2_12, listRatingrq2_13, listRatingrq2_2, listRatingrq2_21, listRatingrq2_22, listRatingrq2_23, listRatingrq2_3, listRatingrq2_31, listRatingrq2_32, listRatingrq2_33]\n",
+    "#l = [listRatingrq1_1w, listRatingrq1_2w, listRatingrq1_3w, listRatingrq2_1w, listRatingrq2_11w, listRatingrq2_12w, listRatingrq2_13w, listRatingrq2_2w, listRatingrq2_21w, listRatingrq2_22w, listRatingrq2_23w, listRatingrq2_3w, listRatingrq2_31w, listRatingrq2_32w, listRatingrq2_33w]\n",
     "\n",
     "print(len(l))\n",
     "#l"
@@ -69,21 +69,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "metadata": {
     "scrolled": true
    },
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'l' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-3-bc8731b75aba>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0ml\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m==\u001b[0m\u001b[0ml\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      2\u001b[0m \u001b[0mlistRatingrq1_1\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mNameError\u001b[0m: name 'l' is not defined"
-     ]
+     "data": {
+      "text/plain": [
+       "['องค์ชายสามช่างไม่เอาไหน (สนพ.ฟาไฉ)',\n",
+       " 'ชายาข้า ใครบังอาจหาญกล้ามาแตะ!!!',\n",
+       " '(omegaverse) midnight fortune #อย่าบอกป๊านะม๊า',\n",
+       " 'มหาลัยครึ่งมนุษย์ (ebook)',\n",
+       " 'เหนือมังกร เคียงบัลลังก์(สนพ.บ้านวายบุ๊ค)']"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -122,7 +125,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "metadata": {
     "scrolled": true
    },
@@ -131,10 +134,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "listRatingrq2_12w equal to listRatingrq2_1w\n",
-      "listRatingrq2_1w equal to listRatingrq2_12w\n",
-      "listRatingrq2_22w equal to listRatingrq2_32w\n",
-      "listRatingrq2_32w equal to listRatingrq2_22w\n"
+      "listRatingrq2_22 equal to listRatingrq2_23\n",
+      "listRatingrq2_23 equal to listRatingrq2_22\n",
+      "listRatingrq2_3 equal to listRatingrq2_31\n",
+      "listRatingrq2_31 equal to listRatingrq2_3\n"
      ]
     }
    ],
